--- a/docker/prod-compose.yaml
+++ b/docker/prod-compose.yaml
@@ -5,7 +5,7 @@ services:
       dockerfile: docker/Dockerfile
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.will_challenges.rule=Host(`will_challenges.sucss.org`)"
+      - "traefik.http.routers.will_challenges.rule=Host(`will-challenges.sucss.org`)"
       - "traefik.http.routers.will_challenges.tls=true"
       - "traefik.http.routers.will_challenges.middlewares=authentik@file"
       - "traefik.http.services.will_challenges.loadbalancer.server.port=8000"
